crates/vize_canon/src/snapshots/vize_canon__tests__virtual_ts_tests__virtual_ts_with_v_for.snap
---
source: crates/vize_canon/src/tests.rs
expression: virtual_ts
---
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// ========== Module Scope (imports) ==========
import { ref } from 'vue'

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (only valid in setup scope, not global)
  // Emit type helper: converts { event: [args] } to callable emit function
  type __EmitFn<T> = T extends Record<string, any[]> ? <K extends keyof T>(event: K, ...args: T[K]) => void : T;
  function defineProps<_T = unknown>(): _T { return undefined as unknown as _T; }
  function defineEmits<_T = unknown>(): __EmitFn<_T> { return (() => {}) as any; }
  function defineExpose<_T = unknown>(_exposed?: _T): void { void _exposed; }
  function defineModel<_T = unknown>(_name?: string, _options?: any): _T { void _name; void _options; return undefined as unknown as _T; }
  function defineSlots<_T = unknown>(): _T { return undefined as unknown as _T; }
  function withDefaults<_T = unknown, _D = unknown>(_props: _T, _defaults: _D): _T & _D { void _props; void _defaults; return undefined as unknown as _T & _D; }
  function useTemplateRef<_T extends Element | import('vue').ComponentPublicInstance = Element>(_key: string): import('vue').ShallowRef<_T | null> { void _key; return undefined as unknown as import('vue').ShallowRef<_T | null>; }
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code
  
  
  const items = ref([1, 2, 3])
  // @vize-map: 1593:1630 -> 0:57

  // ========== Template Scope (inherits from setup) ==========
  (function __template() {
    // Vue instance context (available in template)
    const $attrs: Record<string, unknown> = {} as any;
    const $slots: Record<string, (...args: any[]) => any> = {} as any;
    const $refs: Record<string, any> = {} as any;
    const $emit: (...args: any[]) => void = (() => {}) as any;
    // Mark template context as used
    void $attrs; void $slots; void $refs; void $emit;


  // v-for scope: item in items
  (items).forEach((item: typeof items[number], index: number) => {
    void (index); // VBind
    // @vize-map: expr -> 155:160
    void (index); // Interpolation
    // @vize-map: expr -> 172:177
    void (item); // Interpolation
    // @vize-map: expr -> 185:189
  });
  })();
}

// Invoke setup to verify types
__setup();

// ========== Exported Types ==========
export type Props = {};

export type Emits = {};
export type Slots = {};

// ========== Default Export ==========
declare const __vize_component__: {
  props: Props;
  emits: Emits;
  slots: Slots;
};
export default __vize_component__;
